--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,8 +17,8 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/material_white"
-        app:behavior_peekHeight="56dp"
+        android:background="@android:color/transparent"
+        app:behavior_peekHeight="80dp"
         app:layout_behavior="@string/bottom_sheet_behavior" />
 
 
