--- a/app/src/main/res/layout/item_handler.xml
+++ b/app/src/main/res/layout/item_handler.xml
@@ -1,20 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="56dp"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="24dp"
+    android:layout_marginBottom="10dp"
+    android:layout_marginLeft="@dimen/sheet_padding"
+    android:layout_marginRight="@dimen/sheet_padding"
     android:clickable="true"
-    android:foreground="?attr/selectableItemBackground"
-    android:gravity="center_vertical"
-    android:orientation="horizontal"
-    android:paddingLeft="@dimen/sheet_padding"
-    android:paddingRight="@dimen/sheet_padding">
+    android:foreground="?android:selectableItemBackgroundBorderless"
+    app:cardUseCompatPadding="true"
+    tools:ignore="NewApi">
 
-    <TextView
-        android:id="@+id/handler_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/material_black"
-        android:text="2016年3月9日"
-        android:textSize="@dimen/material_title" />
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:clickable="true"
+        android:foreground="?attr/selectableItemBackground"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:paddingLeft="@dimen/sheet_padding"
+        android:paddingRight="@dimen/sheet_padding">
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/handler_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="2016年3月9日"
+            android:textColor="@color/material_grey_900"
+            android:textSize="@dimen/material_title"
+            tools:ignore="PrivateResource" />
+
+    </LinearLayout>
+</android.support.v7.widget.CardView>
