--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">@color/material_lightBlue_500</color>
     <color name="colorPrimaryDark">@color/material_lightBlue_600</color>
-    <color name="colorAccent">@color/material_red_500</color>
+    <color name="colorAccent">@color/material_deepOrange_500</color>
 </resources>
