--- a/app/src/main/res/layout/item_daily.xml
+++ b/app/src/main/res/layout/item_daily.xml
@@ -1,44 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="5dp"
-    android:layout_marginLeft="@dimen/sheet_padding"
-    android:layout_marginRight="@dimen/sheet_padding"
-    android:clickable="true"
-    android:foreground="?android:selectableItemBackgroundBorderless"
-    app:cardUseCompatPadding="true"
-    tools:ignore="NewApi">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/GankItem">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="5dp">
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:layout_margin="10dp"
+        android:padding="5dp"
+        android:textColor="@color/material_grey_1000"
+        android:textSize="@dimen/material_title" />
 
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentStart="true"
-            android:layout_margin="10dp"
-            android:padding="5dp"
-            android:textColor="@color/material_grey_1000"
-            android:textSize="@dimen/material_title" />
+    <TextView
+        android:id="@+id/content"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/title"
+        android:layout_margin="10dp"
+        android:lineSpacingMultiplier="1.5"
+        android:padding="5dp"
+        android:textSize="@dimen/material_body" />
 
-        <TextView
-            android:id="@+id/content"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/title"
-            android:layout_margin="10dp"
-            android:lineSpacingMultiplier="1.5"
-            android:padding="5dp"
-            android:textSize="@dimen/material_body" />
+    <View
+        style="@style/Gap"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="10dp" />
 
-    </RelativeLayout>
-</android.support.v7.widget.CardView>
+</RelativeLayout>
