--- a/app/src/main/res/layout/item_handler.xml
+++ b/app/src/main/res/layout/item_handler.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="24dp"
-    android:layout_marginBottom="10dp"
-    android:layout_marginLeft="@dimen/sheet_padding"
-    android:layout_marginRight="@dimen/sheet_padding"
-    android:clickable="true"
-    android:foreground="?android:selectableItemBackgroundBorderless"
-    app:cardUseCompatPadding="true"
-    tools:ignore="NewApi">
+    android:orientation="vertical">
+
+    <Space
+        android:id="@+id/space"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/status_bar_height"
+        android:background="@android:color/transparent" />
+
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="56dp"
+        android:background="@color/drawer_color"
         android:clickable="true"
         android:foreground="?attr/selectableItemBackground"
         android:gravity="center_vertical"
@@ -27,10 +26,13 @@
             android:id="@+id/handler_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:text="2016年3月9日"
             android:textColor="@color/material_grey_900"
-            android:textSize="@dimen/material_title"
-            tools:ignore="PrivateResource" />
+            android:textSize="@dimen/material_title" />
 
     </LinearLayout>
-</android.support.v7.widget.CardView>
+
+    <View style="@style/Gap" />
+
+</LinearLayout>
