--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">@color/material_lightBlue_500</color>
     <color name="colorPrimaryDark">@color/material_lightBlue_600</color>
     <color name="colorAccent">@color/material_deepOrange_500</color>
+
+    <color name="gap_color">@color/material_grey_400</color>
+
+    <color name="drawer_color">@color/material_white</color>
 </resources>
