--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,4 +16,8 @@
     <dimen name="material_button">15sp</dimen>
 
     <dimen name="sheet_padding">16dp</dimen>
+
+    <dimen name="gap_height">1dp</dimen>
+
+    <dimen name="status_bar_height">24dp</dimen>
 </resources>
