--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,4 +12,20 @@
         <item name="android:statusBarColor" tools:ignore="NewApi">@android:color/transparent</item>
     </style>
 
+    <style name="Gap">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/gap_height</item>
+        <item name="android:background">@color/gap_color</item>
+    </style>
+
+    <style name="GankItem">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@color/drawer_color</item>
+        <item name="android:paddingLeft">@dimen/sheet_padding</item>
+        <item name="android:paddingRight">@dimen/sheet_padding</item>
+        <item name="android:foreground">?attr/selectableItemBackground</item>
+        <item name="android:clickable">true</item>
+    </style>
+
 </resources>
