--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,4 +20,8 @@
     <dimen name="gap_height">1dp</dimen>
 
     <dimen name="status_bar_height">24dp</dimen>
+
+    <dimen name="load_layout_height">70dp</dimen>
+
+    <dimen name="checked_size">40dp</dimen>
 </resources>
