--- a/app/src/main/res/layout/item_handler.xml
+++ b/app/src/main/res/layout/item_handler.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -24,12 +26,23 @@
 
         <TextView
             android:id="@+id/handler_title"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
+            android:layout_weight="1"
             android:text="2016年3月9日"
             android:textColor="@color/material_grey_900"
             android:textSize="@dimen/material_title" />
+
+        <ImageView
+            android:id="@+id/date_list"
+            android:layout_width="30dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:clickable="true"
+            app:srcCompat="@drawable/ic_list_24dp"
+            tools:ignore="MissingPrefix" />
 
     </LinearLayout>
 
