--- a/app/src/main/res/layout/layout_loading.xml
+++ b/app/src/main/res/layout/layout_loading.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/GankItem"
-    android:layout_height="@dimen/load_layout_height">
+    android:layout_height="match_parent">
 
     <ProgressBar
         android:layout_width="wrap_content"
