--- a/app/src/main/res/layout/item_handler.xml
+++ b/app/src/main/res/layout/item_handler.xml
@@ -14,6 +14,7 @@
 
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/root_handler"
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:background="@color/drawer_color"
