--- a/app/src/main/res/layout/item_data.xml
+++ b/app/src/main/res/layout/item_data.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/GankItem"
-    android:layout_height="60dp"
+    android:layout_height="@dimen/date_item_height"
     android:gravity="center_vertical"
     android:orientation="horizontal">
 
