--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,4 +28,8 @@
         <item name="android:clickable">true</item>
     </style>
 
+    <style name="MoreMenu">
+        <item name="android:background">?attr/selectableItemBackground</item>
+    </style>
+
 </resources>
