修复了日期不更新的问题，修复了一些潜在的BUG

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -28,5 +28,6 @@
     <dimen name="checked_size">40dp</dimen>
 
     <dimen name="behavior_peekHeight">56dp</dimen>
+    <dimen name="image_margin">56dp</dimen>
 
 </resources>
