使用侧滑栏显示日期列表，进行了一些列优化

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="gap_color">@color/material_grey_400</color>
 
     <color name="drawer_color">@color/material_white</color>
+
+    <color name="item_select_color">#df1f1f</color>
+    <color name="item_normal_color">#5f19ba</color>
 </resources>
